--- a/style.css
+++ b/style.css
@@ -32,6 +32,38 @@ header h1 {
     font-size: 2.5rem;
 }
 
+.header-flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+
+
+}
+
+.search-input{
+    width: 300px;
+    padding: 10px;
+    border: 2px solid #a730ad;
+    font-size: 16px;
+    font-family: 'Impact', Fantasy;  
+
+    
+}
+
+.search-button{
+    padding: 10px 20px;
+    background-color: #913b9c;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.search-button:hover{
+    background-color: #a730ad;
+}
+
+
 .tagline {
     font-style: italic;
     color: var(--color-accent);
@@ -205,4 +237,5 @@ footer {
     color: var(--text-primary);
     border-top: 4px solid var(--color-accent);
     margin-top: 2rem;
+
 }
