--- a/style.css
+++ b/style.css
@@ -39,35 +39,49 @@ header h1 {
     align-items: center;
     gap: 5px;
 
-
-
 }
 
 .header-title{
     flex: 1;
 }
 
-.search-input{
-    display:flex;
-    width: 300px;
-    padding: 10px;
-    border: 2px solid #a730ad;
-    font-size: 16px;
-    font-family: 'Impact', Fantasy;  
+.search-container{
+    display: flex;
 
-    
+    justify-content: center;
+
 }
 
-.search-button{
-    display: flex;
+#search-input{
+    width: 300px;
+
+    padding: 10px;
+
+    border: 2px solid #a730ad;
+    border-radius: 8px; 
+
+    font-size: 16px;
+    font-family: 'Impact', Fantasy;
+    
+    background-color: var(--bg-primary);
+    color: var(--text-primary);
+
+}
+
+#search-button{
     padding: 10px 20px;
+
     background-color: #913b9c;
     color: white;
+
     font-size: 16px;
+
     cursor: pointer;
+
+    border-radius: 8px; 
 }
 
-.search-button:hover{
+#search-button:hover{
     background-color: #a730ad;
 }
 
@@ -233,7 +247,7 @@ input[type="number"] {
     margin: 15px;
 
     font-size: small;
-    color: var(--color-accent);
+    color: var(--color-muted);
 }
 
 #info-source{
