--- a/style.css
+++ b/style.css
@@ -4,11 +4,7 @@
     --text-primary: white;
     --text-secondary: rgb(153, 71, 212);
     --color-primary: #a730ad; 
-<<<<<<< HEAD
     --color-accent: #a730ad;
-=======
-    --color-accent: rgb(73, 4, 168);
->>>>>>> 651d46e7e482fbc1a14a7060b0035e8a021ed736
     --color-muted: #888888;
     --shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
 }
@@ -42,65 +38,31 @@ header h1 {
     justify-content: center;
     align-items: center;
     gap: 5px;
+    flex-wrap: wrap;
 
 }
 
-.header-title{
-    flex: 1;
-}
-
-.search-container{
-    display: flex;
-
-    justify-content: center;
-
-
-}
-
-.header-title{
-    flex: 1;
-}
-
-<<<<<<< HEAD
 .search-input{
     display:flex;
-=======
-#search-input{
->>>>>>> 651d46e7e482fbc1a14a7060b0035e8a021ed736
     width: 300px;
-
     padding: 10px;
-
     border: 2px solid #a730ad;
-    border-radius: 8px; 
-
     font-size: 16px;
-    font-family: 'Impact', Fantasy;
-    
-    background-color: var(--bg-primary);
-    color: var(--text-primary);
+    font-family: 'Impact', Fantasy;  
 
+    
 }
 
-<<<<<<< HEAD
 .search-button{
     display: flex;
-=======
-#search-button{
->>>>>>> 651d46e7e482fbc1a14a7060b0035e8a021ed736
     padding: 10px 20px;
-
     background-color: #913b9c;
     color: white;
-
     font-size: 16px;
-
     cursor: pointer;
-
-    border-radius: 8px; 
 }
 
-#search-button:hover{
+.search-button:hover{
     background-color: #a730ad;
 }
 
@@ -257,31 +219,6 @@ input[type="number"] {
     padding-left: 0;
 }
 
-<<<<<<< HEAD
-=======
-.select-API{
-
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
-
-    margin: 15px;
-
-    font-size: small;
-    color: var(--color-muted);
-}
-
-#info-source{
-
-    margin-left: 10px;    
-
-    color: var(--text-primary);
-    background-color: var(--color-accent);
-    
-    border-radius: 1rem;
-}
-
->>>>>>> 651d46e7e482fbc1a14a7060b0035e8a021ed736
 #history li {
     color: var(--text-primary);
     padding: 0.25rem;
@@ -294,45 +231,13 @@ input[type="number"] {
     border-radius: 8px;
 }
 
-#lyrics-container{
-    display: flex;
-
-    flex-direction: column;
-
+.footer-flex{
+    display:flex;
+    justify-content: center;
     align-items: center;
-
-    padding: 1rem;
-    margin: .5rem;
-
-    background-color: var(--bg-secondary);
-    border-radius: 8px;
-
+    
+  
 }
-
-#lyrics-container #lyrics-header{
-    font-size: 35px;
-    font-style: italic;
-    padding: 1rem;
-}
-
-/* this requeres us to make every newline a <br> (and every space a <br><br>
-    otherwise, this works perfectly well in my opinion */
-#lyrics-container #lyrics-text{
-
-    width: 90%;
-
-    font-size: 30px;
-
-    text-align: center;
-
-    padding: 2rem;
-
-    background-color: var(--color-accent);
-
-    border-radius: 8px;
-
-}
-
 footer {
     text-align: center;
     padding: 1rem;
@@ -340,8 +245,5 @@ footer {
     color: var(--color-primary);
     border-top: 4px solid var(--color-primary);
     margin-top: 2rem;
-<<<<<<< HEAD
+    width: 20cm;
 }
-=======
-}
->>>>>>> 651d46e7e482fbc1a14a7060b0035e8a021ed736
